test/asm/endsection.asm
SECTION "test", ROM0
	db 1
ENDSECTION
	db 2
